[package]
authors = ["Michael Emmert <michael.emmert@st.oth-regensburg.de>"]
edition = "2018"
readme = "README.md"
name = "test1"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.7"
panic-halt = "0.2.0"
# tm4c123x = "0.9.0"  # see below: to use interrupt "rt" has to be passed to the PAC lib

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
[dependencies.tm4c123x]
version = "0.9.0"
features = ["rt"]

[features]
rt = ["tm4c123x/rt"]

# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "test1"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
